[profile.release]
panic="abort"

[package]
name = "bridge"
version = "0.1.0"
authors = ["Sundström Valter <mail@valter.nu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
desse = "0.2"
